<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26a69a">

        <TextView
            android:id="@+id/firstButton"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/first_button"
            android:gravity="center"
            android:text="@string/first_button"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="@string/letter_label_text"
            android:textColor="#333"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/letterContent"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:lineSpacingMultiplier="1.5"
            android:textSize="14sp"
            android:gravity="start"
            android:padding="10dp"
            android:ems="16"
            android:inputType="textMultiLine"
            android:hint="@string/letter_body_placeholder"
            android:background="@drawable/textarea_background"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="@string/letter_contact_email"
            android:textColor="#333"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/emailContent"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/letter_email_placeholder"
            android:background="@drawable/textarea_background"/>

        <TextView
            android:id="@+id/submitButton"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/confirm_submit"
            android:background="@drawable/user_login_button"/>
    </LinearLayout>
</RelativeLayout>
