<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26a69a">

        <TextView
            android:id="@+id/firstButton"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/first_button"
            android:gravity="center"
            android:text="@string/first_button"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_bottom"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/countryCode"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:gravity="center"
                android:text="@string/mobile_country_code"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/userMobile"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/countryCode"
                android:background="@android:color/transparent"
                android:hint="@string/mobile_placeholder"
                android:textSize="16sp"
                android:inputType="number"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/userSmsCode"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@android:color/transparent"
                android:hint="@string/smscode_placeholder"
                android:textSize="16sp"
                android:inputType="number"
                android:maxLength="6"/>

            <Button
                android:id="@+id/userSendCode"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:text="@string/user_send_code"
                android:textSize="14sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <Button
            android:id="@+id/userSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/user_login_button"
            android:textColor="@drawable/user_login_foreground"
            android:layout_margin="0dp"
            android:textSize="16sp"
            android:enabled="false"
            android:background="@drawable/user_login_button"
            />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
